# src/models/book.go
@@ -1,10 +1,10 @@
 package models
 
 import(
-	//"github.com/astaxie/beego/validation"
-	//"log"
 	"github.com/astaxie/beego/orm"
 	_"common/conndatabase"
+	"strconv"
+	"fmt"
 )
 
 type Books struct {
@@ -18,6 +18,7 @@ type Books struct {
 	Depreciation uint8	`json:"depreciation"`
 	Price        uint16	`json:"price" valid:"Numeric"`
 	Describe     string	`json:"describe"`
+	Userid		 string	`json:"userid"`
 	State        uint8	`json:"state" valid:"Required;Range(0, 1)"`
 }
 
@@ -28,4 +29,40 @@ func init()  {
 func (this *Books) GetBookinfo (bookid int64) Books  {
 
 	return *this
+}
+
+//获取图书列表
+func  GetBookList(start int,length int,conditions string) (books []*Books,totalItem int){
+	if start < 1 {
+		start = 0
+	}
+	if length == 0 {
+		length = 15
+	}
+	var  countSql = "select count(*) from  lb_books  where true "+conditions
+	var  rowsSql  = "select *  from  lb_books where true "+conditions+"  order by bookid desc  limit " + strconv.Itoa(start) + "," + strconv.Itoa(length)
+	o := orm.NewOrm()
+	o.Raw(countSql).QueryRow(&totalItem) //获取总条数
+	o.Raw(rowsSql).QueryRows(&books)
+	return  books,totalItem
+}
+
+//查询数据库是否存在该条形码
+func  GetIbsn(isbn string)(b *Books,err error){
+	args := []string{isbn}
+	sql := "select * from lb_books where isbn=? limit 1"
+	RawSeter := orm.NewOrm().Raw(sql,args)
+	if err = RawSeter.QueryRow(&b);err == nil{
+        return b,nil
+	}
+	return nil, err
+}
+//修改图书信息
+func UpdateBookById(m *Books) (err error) {
+	o := orm.NewOrm()
+	var num int64
+	if num, err = o.Update(m); err == nil {
+		fmt.Println("Number of records updated in database:", num)
+	}
+	return
 }
