# src/models/bookrack_io.go
@@ -1,45 +1,29 @@
 package models
 
 type BookrackList struct {
-	Userid       string   `json:"userid" valid:"Required" orm:"pk;size(20);column(userid);"`
-	Bookid       string   `json:"bookid" valid:"Required"`
-	Bookstate    string   `json:"bookstate"`
-	Create_time  int64    `json:"create_time"`
-	Update_time  int64    `json:"update_time"`
+	Bookqid      string  `json:"bookqid" orm:"pk;size(20);column(bookqid);"`
+	Userid       string  `json:"userid"`
+	Bookid       string  `json:"bookid"`
+	Book_state   string  `json:"bookstate"`
+	Is_borrow    string  `json:"is_borrow"`
+	Create_time  int64   `json:"create_time"`
+	Update_time  int64   `json:"update_time"`
 	Bookname     string `json:"bookname"`
-	Author       string	`json:"auhtor" `
+	Author       string	`json:"auhtor""`
 	Imageurl     string	`json:"imageurl"`
+	Imagehead    string	`json:"imagehead"`
+	Imageback    string	`json:"imageback"`
+	Isbn         string	`json:"isbn"`
 	Depreciation uint8	`json:"depreciation"`
-	State        uint8	`json:"state"`
-	Nickname  	string 	`json:"nickname"`
-	Imgurl    	string 	`json:"imgurl" `
-	Gender  	int8  	`json:"gender"`
-	Age   		int32 	`json:"age"`
-}
-
-type BookrackInfo struct {
-	Userid       string   `json:"userid" valid:"Required" orm:"pk;size(20);column(userid);"`
-	Bookid       string   `json:"bookid" valid:"Required"`
-	Bookstate    string   `json:"bookstate"`
-	Create_time  int64    `json:"create_time"`
-	Update_time  int64    `json:"update_time"`
-	Books
-	Users
-}
-
-func  BooksrackList(start int,length int,conditions string,filed string) (book []BookrackList,total int){
-	var books []BookrackList
-	var  TableName = "lb_bookrack as r left join lb_books  as b on r.bookid = b.bookid  left join lb_users as u on u.userid = r.userid "
-	totalItem, res :=GetPagesInfo(TableName,start,length,conditions,filed)
-	res.QueryRows(&books)
-	return  books,totalItem
+	Price        uint16	`json:"price"`
+	Describe     string	`json:"describe"`
+	State        uint8	`json:"state" `
 }
 
 
-func  BooksrackInfo(start int,length int,conditions string,filed string) (book []BookrackInfo,total int){
-	var books []BookrackInfo
-	var  TableName = "lb_bookrack as r left join lb_books  as b on r.bookid = b.bookid  left join lb_users as u on u.userid = r.userid "
-	totalItem, res :=GetPagesInfo(TableName,start,length,conditions,filed)
-	res.QueryRows(&books)
-	return  books,totalItem
+type BookExist struct {
+	Userid       string   `json:"userid"`
+	Bookid       string   `json:"bookid"`
 }
+
+
